crates/uitest/fixtures/ty_check/const_fn/non_const_operator_impl.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/const_fn/non_const_operator_impl.fe
---
error[8-0062]: non-const call in `const fn`
   ┌─ non_const_operator_impl.fe:16:5
   │
16 │     (RuntimeCounter { value: 1 }) + (RuntimeCounter { value: 2 })
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `add` is not a `const fn`
   │
   ┌─ src/ops.fe:4:8
   │
 4 │     fn add(own self, _ other: own T) -> Self::Output
   │        --- callee defined here

error[8-0062]: non-const call in `const fn`
   ┌─ non_const_operator_impl.fe:22:5
   │
22 │     lhs + rhs
   │     ^^^^^^^^^ `add` is not a `const fn`
   │
   ┌─ src/ops.fe:4:8
   │
 4 │     fn add(own self, _ other: own T) -> Self::Output
   │        --- callee defined here
